# techtracker

./: .gitignore  DEPLOYMENT.md  database.py  desc.md  gmail_helpers.py  init_db.py  lnkdn.py  main.py  mcp_server.py  models.py  notes.txt  pyproject.toml  render.yaml  requirements.txt  start.sh  test_gmail_token.py  update_gmail_creds.py  youtube_helpers.py
frontend/: app.js  index.html  style.css
